[metadata]
name = stactools-kaza-hydroforecast
version = attr: stactools.kaza_hydroforecast.__version__
description = STAC catalog generator for seasonal river flow forecasts for the Kwando and Upper Zambezi rivers in the KAZA region of Africa, produced by Upstream Techs HydroForecast model.
long_description = file: README.md
long_description_content_type = text/markdown
author = Upstream Tech
author_email = team@hydroforecast.com
url = https://github.com/stactools-packages/kaza-hydroforecast
project_urls =
    Issues = https://github.com/stactools-packages/kaza-hydroforecast/issues
keywords =
    HydroForecast
    KAZA
    Kwando
    Zambezi
    River
    Streamflow
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.3.1
    pandas
    stac-table@git+https://github.com/TomAugspurger/stac-table

[options.packages.find]
where = src
